--- a/example.html
+++ b/example.html
@@ -1,12 +1,74 @@
-<div class="jumbotron text-center">
-<link rel="stylesheet" type:"text/css" href="css.css">
-  <h1>Listly</h1>
-  <p>Welcome to our app!!</p>
-</div>
+<html>
+    <head>
+        <link rel="stylesheet" type:"text/css" href="css.css">
+    </head>
+    <body>
+        <div class="top">
+            <div class="bar">
+                <div class="top-left">
+                <a href="#home" class="bar-item button">
+                <b>LIST</b>ify
+                </a>
+                </div>
+            <!-- add css-->
+                <div class="top-right">
+                    <a href=#Global class="bar-item button">Global</a>
+                    <a href=#Following class="bar-item button">Following</a>
+                    <a href=#Me class="bar-item button">Me</a>
+                </div>
+            </div>
 
-<div class="section 1">
-  <div class="row">
-    <div class="column">
+        </div>
+        <div class="header">
+            <div class="name">
+                <a>BROOK CONNELLY</a>
+            </div>
+            <div class="bio">
+                <ul>ABOUT ME
+                    <li>Recent College Grad</li>
+                <li>Living in Philly</li>
+                <li>Bookworm</li></ul>
+            </div>
+        </div>
+        
+        <div class="sections">
+                <div class="category">
+                    <div class="section1">
+                    <ul><b>Books</b>
+                    <li>The Things We Cannot Say</li>
+                    <li>Verity</li>
+                    <li>I Owe You One</li>
+                    <li>Fool Me Once</li>
+                    <li>Summer Sisters</li>
+                    </ul></div>
+                
+                    <div class="section2">
+                    <ul><b>Movies</b>
+                    <li>Step Brother</li>
+                    <li>My Sister's Keeper</li>
+                    <li>Remember Me</li>
+                    <li>The Longest Ride</li>
+                    <li>Cheaper by the Dozen</li>
+                    </ul>
+                    </div>
+
+                    <div class="section3">
+                        <ul><b>TV Shows</b>
+                        <li>Friends</li>
+                        <li>The Office</li>
+                        <li>One Tree Hill</li>
+                        <li>Parks & Rec</li>
+                        <li>Indian Match Maker</li>
+                    </ul>
+                    </div>
+
+            </div>
+        </div>
+
+
+    <!-- <div class="section 1">
+        <div class="row">
+        <div class="column">
       <h3>Books</h3>
       <p>Little Fires Everywhere</p>
     </div>
@@ -18,5 +80,6 @@
       <h3>TV Shows</h3>
       <p>All American</p>
     </div>
-  </div>
-</div>
+  </div> -->
+</body>
+</html>
