added log in page
-logo
-sign in page with bootstrap template
-links to home page and back
-link to css.css and individual signin.css

--- a/example.html
+++ b/example.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" type:"text/css" href="css.css">
+        
     </head>
     <body>
         <div class="top">
@@ -15,6 +16,7 @@
                     <a href=#Global class="bar-item button">Global</a>
                     <a href=#Following class="bar-item button">Following</a>
                     <a href=#Me class="bar-item button">Me</a>
+                    <a href="sign-in.html" class="bar-item button">Login</a>
                 </div>
             </div>
 
