added html pages to link
-worked on spacing and shading of profile page
-created global, following, me html pages and linked pages back to home page

--- a/example.html
+++ b/example.html
@@ -7,15 +7,15 @@
         <div class="top">
             <div class="bar">
                 <div class="top-left">
-                <a href="#home" class="bar-item button">
+                <a href="example.html" class="bar-item button">
                 <b>LIST</b>ify
                 </a>
                 </div>
             <!-- add css-->
                 <div class="top-right">
                     <a href=#Global class="bar-item button">Global</a>
-                    <a href=#Following class="bar-item button">Following</a>
-                    <a href=#Me class="bar-item button">Me</a>
+                    <a href="following.html" class="bar-item button">Following</a>
+                    <a href="me.html" class="bar-item button">Me</a>
                     <a href="sign-in.html" class="bar-item button">Login</a>
                 </div>
             </div>
