--- a/example.html
+++ b/example.html
@@ -13,7 +13,7 @@
                 </div>
             <!-- add css-->
                 <div class="top-right">
-                    <a href=#Global class="bar-item button">Global</a>
+                    <a href="global.html" class="bar-item button">Global</a>
                     <a href="following.html" class="bar-item button">Following</a>
                     <a href="me.html" class="bar-item button">Me</a>
                     <a href="sign-in.html" class="bar-item button">Login</a>
