--- a/example.html
+++ b/example.html
@@ -26,7 +26,7 @@
                 <a>BROOK CONNELLY</a>
             </div>
             <div class="bio">
-                <ul>ABOUT ME
+                <ul><b>ABOUT ME</b>
                     <li>Recent College Grad</li>
                 <li>Living in Philly</li>
                 <li>Bookworm</li></ul>
