--- a/following.html
+++ b/following.html
@@ -14,6 +14,7 @@
                     <a href="following.html" class="bar-item button">Following</a>
                     <a href="me.html" class="bar-item button">Me</a>
                     <a href="sign-in.html" class="bar-item button">Login</a>
+                    <a href="newpost.html" class="bar-item button">+</a>
                 </div>
             </div>
         </a>
