--- a/me.html
+++ b/me.html
@@ -17,6 +17,44 @@
                     <a href="newpost.html" class="bar-item button">+</a>
                 </div>
               </div>
+              <div>
+                <style>
+                  input[type=text] {
+                    width: 100%;
+                    padding: 12px 20px;
+                    margin: 8px 0;
+                    box-sizing: border-box;
+                    border: 3px solid #ccc;
+                    -webkit-transition: 0.5s;
+                    transition: 0.5s;
+                    outline: none;
+                    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+                  }
+                  input[type=text]:focus {
+                   border: 3px solid #555;
+                  }
+                  
+                </style>
+                <form action="/action_page.php">
+                  <label for="fname">User Name</label>
+                  <input type="text" id="title" name="title" placeholder="Name">
+                  <label for="type">About Me</label>
+                  <input type="text" id="type" name="type" placeholder="Bio">
+                    <textarea {
+                      width: 100%;
+                      height: 100px;
+                      padding: 30px;
+                      box-sizing: border-box;
+                      border: 2px solid #ccc;
+                      border-radius: 4px;
+                      background-color: #f8f8f8;
+                      font-size: 16px;
+                      resize: none;
+                   }></textarea>
+
+                  <input type="submit" value="Post">
+                </form>
+              </div>
             </div>
         </a>
     </head>
