--- a/example.html
+++ b/example.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         
-        <div class="sections">
+     <!--   <div class="sections">
                 <div class="category">
                     <div class="section1">
                         <ul><b>Books</b>
@@ -66,7 +66,7 @@
 
             </div>
         </div>
-
+    -->
 
     <!-- <div class="section 1">
         <div class="row">
