--- a/newpost.html
+++ b/newpost.html
@@ -67,15 +67,17 @@
                   
                 </style>
                 <form action="/action_page.php">
-                  <label for="fname">Title</label>
-                  <input type="text" id="title" name="title" placeholder="Post Title">
-                  <label for="type">Type</label>
-                  <input type="text" id="type" name="type" placeholder="What's up?">
-                  <label for="category">Category</label>
-                  <input type="text" id="category" name="category" placeholder="What's up?">
                   <label for="post">Post</label>
-                  <input type="text" id="post" name="post" placeholder="What's up?">
-                    <textarea {
+                  <input type="text" id="title" name="title" placeholder="Write a post.">
+                  <label for="category">Choose a category:</label>
+                  <select name="category" id="category">
+                     <option value="Movies">Movies</option>
+                    <option value="Food">Food</option>
+                    <option value="Books">Books</option>
+                    <option value="Music">Music</option>
+                    <option value="Other">Other</option>
+                  </select>
+                    <!-- <textarea {
                       width: 100%;
                       height: 100px;
                       padding: 30px;
@@ -85,7 +87,7 @@
                       background-color: #f8f8f8;
                       font-size: 16px;
                       resize: none;
-                   }></textarea>
+                   }></textarea> -->
 
                   <input type="submit" value="Post">
                 </form>
