--- a/me.html
+++ b/me.html
@@ -35,25 +35,19 @@
                   }
                   
                 </style>
-                <form action="/action_page.php">
-                  <label for="fname">User Name</label>
-                  <input type="text" id="title" name="title" placeholder="Name">
-                  <label for="type">About Me</label>
-                  <input type="text" id="type" name="type" placeholder="Bio">
-                    <textarea {
-                      width: 100%;
-                      height: 100px;
-                      padding: 30px;
-                      box-sizing: border-box;
-                      border: 2px solid #ccc;
-                      border-radius: 4px;
-                      background-color: #f8f8f8;
-                      font-size: 16px;
-                      resize: none;
-                   }></textarea>
-
-                  <input type="submit" value="Save">
-                </form>
+                <!-- <form action="/action_page.php"> -->
+                  <div class= "Profile">
+                    <h1>Username</h1>
+                    <p class="title">Input "about me"</p>
+                    <p>Interests:</p>
+                    <p>Posts:</p>
+                  </div>
+                <!--   <label for="username">User Name</label>
+                  <input type="text" id="title" name="title" placeholder="Input name here">
+                  <label for="bio">About Me</label>
+                  <input type="text" id="type" name="type" placeholder="Input about me here">
+                  <label for="tags">Interests</label>
+                </form> -->
               </div>
             </div>
         </a>
