--- a/me.html
+++ b/me.html
@@ -1,14 +1,13 @@
 <html>
     <head>
-        <link rel="stylesheet" type:"text/css" href="css.css">
+        <link rel="stylesheet" type:"text/css" href="css1.css">
         <div class="top">
             <div class="bar">
-                <div class="top-left">
+              <div class="top-left">
                 <a href="example.html" class="bar-item button">
                 <b>LIST</b>ify
                 </a>
                 </div>
-            <!-- add css-->
                 <div class="top-right">
                     <a href="global.html" class="bar-item button">Global</a>
                     <!-- <a href="following.html" class="bar-item button">Following</a> -->
@@ -16,8 +15,7 @@
                     <a href="sign-in.html" class="bar-item button">Login</a>
                     <a href="newpost.html" class="bar-item button">+</a>
                 </div>
-              </div>
-              <div>
+            </div>
           </div>
                 <style>
                   input[type=text] {
@@ -34,13 +32,11 @@
                   input[type=text]:focus {
                    border: 3px solid #555;
                   }
-                  
                 </style>
-                <!-- <form action="/action_page.php"> -->
                   <div class= "Profile">
-                    <h1>Username</h1>
-                    <p class="title">Input "about me"</p>
-                    <p>Interests:</p>
+                    <p class = "name">Username</p>
+                    <p class="bio">Input "about me"</p>
+                    <p class="category">Interests:</p>
                     <button type="button">Movies</button>
                     <button type="button">Books</button>
                     <button type="button">Food</button>
@@ -66,16 +62,8 @@
                     <p id="demo1"></p>
                     <script>
                         document.getElementById("demo1").innerHTML = "Hehe.#@$%&*^BJDSJHDdJKHF";
-                    </script> 
-                                          
+                    </script>                
                   </div>
-                  </div>
-                <!--   <label for="username">User Name</label>
-                  <input type="text" id="title" name="title" placeholder="Input name here">
-                  <label for="bio">About Me</label>
-                  <input type="text" id="type" name="type" placeholder="Input about me here">
-                  <label for="tags">Interests</label>
-                </form> -->
               </div>
             </div>
         </a>
