Revert "updates to css for me page"
This reverts commit 4ec3558435fd361ab22518fe928ff93188fb7cfc.

--- a/me.html
+++ b/me.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type:"text/css" href="css.css">
+        <link rel="stylesheet" type:"text/css" href="css1.css">
         <div class="top">
             <div class="bar">
               <div class="top-left">
@@ -33,7 +33,7 @@
                    border: 3px solid #555;
                   }
                 </style>
-                  <div style = "padding-top: 200px;">
+                  <div class= "Profile">
                     <p class = "name">Username</p>
                     <p class="bio">Input "about me"</p>
                     <p class="category">Interests:</p>
