--- a/me.html
+++ b/me.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" type:"text/css" href="css1.css">
+        <link rel="stylesheet" type:"text/css" href="css.css">
         <div class="top">
             <div class="bar">
               <div class="top-left">
