sorry ignore post.html

--- a/me.html
+++ b/me.html
@@ -33,7 +33,7 @@
                    border: 3px solid #555;
                   }
                 </style>
-                  <div class= "Profile">
+                  <div style = "padding-top: 200px;">
                     <p class = "name">Username</p>
                     <p class="bio">Input "about me"</p>
                     <p class="category">Interests:</p>
