--- a/Welcomepage.html
+++ b/Welcomepage.html
@@ -5,10 +5,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <title>Welcome to Listify</title>
+    <title>Listify</title>
 
     <!-- Bootstrap core CSS -->
-<link href="signin.css" rel="stylesheet">
+  <link href="signin.css" rel="stylesheet">
+  <!-- <link href="css.css" rel="stylesheet"> -->
+
 <div class="top">
 
   <!-- add css-->
@@ -32,19 +34,19 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="signin.css" rel="stylesheet">
-    <link href="css.css" rel="stylesheet">
   </head>
   <body class="text-center">
     <form class="form-signin">
   <img class="mb-4" src="./ListifyLogo.png" alt="" width="72" height="72">
+<div  class="main">
   <h1 class="h3 mb-3 font-weight-normal">Welcome to Listify!</h1>
 
   <!--<p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p> -->
   <div class="links2">
-<a href ="register.php" class="btn btn-large btn-block btn-primary" type="button"  >Make an Account</a>
-<a href ="index.php" class="btn btn-large btn-block btn-primary" type="button" >Login </a>
-  </div>
+    <a href ="register.php" class="btn btn-lg btn-primary btn-block" type="button" name="submit">Sign Up</a>
+    <a href ="index.php" class="btn btn-lg btn-primary btn-block" type="button" name="submit">Log in </a>
+  </div>  
+</div>
 </form>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
