--- a/me.html
+++ b/me.html
@@ -1,74 +1,57 @@
+
 <html>
     <head>
-        <link rel="stylesheet" type:"text/css" href="css.css">
-        <div class="top">
-            <div class="bar">
-              <div class="top-left">
-                <a href="example.html" class="bar-item button">
-                <b>LIST</b>ify
-                </a>
-                </div>
-                <div class="top-right">
-                    <a href="global.html" class="bar-item button">Global</a>
-                    <!-- <a href="following.html" class="bar-item button">Following</a> -->
-                    <a href="me.html" class="bar-item button">Me</a>
-                    <a href="sign-in.html" class="bar-item button">Login</a>
-                    <a href="newpost.html" class="bar-item button">+</a>
-                </div>
-            </div>
-          </div>
-                <style>
-                  input[type=text] {
-                    width: 100%;
-                    padding: 12px 20px;
-                    margin: 8px 0;
-                    box-sizing: border-box;
-                    border: 3px solid #ccc;
-                    -webkit-transition: 0.5s;
-                    transition: 0.5s;
-                    outline: none;
-                    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
-                  }
-                  input[type=text]:focus {
-                   border: 3px solid #555;
-                  }
-                </style>
-                  <div style = "padding-top: 200px;">
-                    <p class = "name">Username</p>
-                    <p class="bio">Input "about me"</p>
-                    <p class="category">Interests:</p>
-                    <button type="button">Movies</button>
-                    <button type="button">Books</button>
-                    <button type="button">Food</button>
-                    <p>Posts:</p>
-                    <div class= "Posts">
-                    <h1>Posts</h1>
-                    <h2>Post Title</h2>
-                    <p>Post content lalalalalalalal Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events. EMERYVILLE, Calif. — Huddled under blankets to brace against the cold, J.B. August and his buddies couldn’t help grinning as the doors of the boarded-up GameStop store finally opened. I’m just treating myself — it’s therapy,” said Mr. August, 35, before triumphantly carrying the device out of the store after 18 hours of waiting. “I never really have time to do anything for myself, so let me just go ahead and make an investment for myself and my peace of mind. The gaming craze on display in the Bay Area was echoed around the country this week as video gamers flocked to stores and crashed preorder websites in their rush to buy new video game consoles: Microsoft’s Xbox Series X and Sony’s PlayStation 5.";
-                    </p>
-                    <h2>Post Title</h2>
-                    <p>Post content lalalalalalalal Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events. EMERYVILLE, Calif. — Huddled under blankets to brace against the cold, J.B. August and his buddies couldn’t help grinning as the doors of the boarded-up GameStop store finally opened. I’m just treating myself — it’s therapy,” said Mr. August, 35, before triumphantly carrying the device out of the store after 18 hours of waiting. “I never really have time to do anything for myself, so let me just go ahead and make an investment for myself and my peace of mind. The gaming craze on display in the Bay Area was echoed around the country this week as video gamers flocked to stores and crashed preorder websites in their rush to buy new video game consoles: Microsoft’s Xbox Series X and Sony’s PlayStation 5.";
-                    </p>
-                    <details>
-                      <summary>First Post :P</summary>
-                      <p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
-                    </details>
-                    <h1>First Post :P</h1>
-                    <p id="demo"></p>
-                    <script>
-                        document.getElementById("demo").innerHTML = "EMERYVILLE, Calif. — Huddled under blankets to brace against the cold, J.B. August and his buddies couldn’t help grinning as the doors of the boarded-up GameStop store finally opened. I’m just treating myself — it’s therapy,” said Mr. August, 35, before triumphantly carrying the device out of the store after 18 hours of waiting. “I never really have time to do anything for myself, so let me just go ahead and make an investment for myself and my peace of mind. The gaming craze on display in the Bay Area was echoed around the country this week as video gamers flocked to stores and crashed preorder websites in their rush to buy new video game consoles: Microsoft’s Xbox Series X and Sony’s PlayStation 5.";
-                    </script> 
-                    <h1>Second Post :{)</h1>
-                    <p id="demo1"></p>
-                    <script>
-                        document.getElementById("demo1").innerHTML = "Hehe.#@$%&*^BJDSJHDdJKHF";
-                    </script>                
-                  </div>
-              </div>
-            </div>
-        </a>
-    </head>
-    <body>
+        <link rel="stylesheet" type:"text/css" href="css-me.css">
+  </head>  
+  <body>
+      
+    <div class="bar">
+      <div class="top-left">
+          <a class="bar-item button" href="welcomepage.html"> 
+            <b>LIST</b>ify
+          </a>
+      </div>
+      <div class="top-right">
+          <a class="bar-item button" href="global.php" >Global</a>
+          <!-- <a href="following.html" class="bar-item button">Following</a> -->
+          <a href="me.php" class="bar-item button">Me</a>
+          <a href="index.php" class="bar-item button">Login</a>
+          <a href="newpost.php" class="bar-item button">+</a>
+      </div>
+    </div>
+      <div id = "block1">
+                    <h2 class = "name">taylor pane</h2>
+                    <p class="bio">hi i'm taylor and i'm so excited to be here! What is an Instagram Bio? Your Instagram bio is the section on your profile page where you include some information about yourself and/or your business. It can be found underneath your Instagram username. In your bio, you can include a short description,</p>
+       </div>
+       <div id = "block2">
+                    <h2 class="category">Interests:</h2>
+                    <!-- liz: can you change css of list to make 2 columns" -->
+                    <?php foreach ($categories as $v) { 
+                      //echo "<button type=\"button\"> $v </button>
+                      echo "<ul title = \"$v\">";
+                      foreach($postArray as $post) { 
+                        if($post[1] == $v){ 
+                          echo "<a href=\"#$post[4]\"> <li> $post[0] </li></a>";
+                        }
+                      }
+                      echo "</ul>";
+                    }
 
+                    ?>
+      </div>
+                    <h2>Posts:</h2>
+                    <div class= "Posts">
+                    
+                    <?php
+                    foreach ($postArray as $post){ 
+                     echo 
+                    "<p id=\"$post[4]\">
+                    <h2>$post[0]</h2>
+                    <p>$post[1]</p>
+                    <p>$post[2]</p>
+                    <p>$post[3]</p>";
+                    }
+                    ?>            
+                  </div>
     </body>
 </html>
