--- a/Welcomepage.html
+++ b/Welcomepage.html
@@ -37,7 +37,7 @@
   </head>
   <body class="text-center">
     <form class="form-signin">
-  <img class="mb-4" src="./listify 1.png" alt="" width="204" height="77">
+  <img class="mb-4" src="./ListifyLogo.png" alt="" width="72" height="72">
 <div  class="main">
   <h1 class="h3 mb-3 font-weight-normal">Welcome to Listify!</h1>
 
