updates to logo and css

--- a/Welcomepage.html
+++ b/Welcomepage.html
@@ -37,9 +37,9 @@
   </head>
   <body class="text-center">
     <form class="form-signin">
-  <img class="mb-4" src="./listify 1.png" alt="" width="204" height="77">
+  <img class="mb-4" src="./listify 1 white.png" alt="" width="204" height="77">
 <div  class="main">
-  <h1 class="h3 mb-3 font-weight-normal">Welcome to Listify!</h1>
+  <h1 class="h3 mb-3 font-weight-normal">Welcome!</h1>
 
   <!--<p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p> -->
   <div class="links2">
