--- a/me.html
+++ b/me.html
@@ -9,19 +9,29 @@
       <div class="top-left">
           <a class="bar-item button" href="welcomepage.html"> 
             <!-- <b>LIST</b>ify -->
-            <img class="mb-4" src="./listify 1.png" alt="" width="100" height="35">
+            <img class="mb-4" src="./listify 1 white.png" alt="" width="100" height="35">
           </a>
       </div>
       <div class="top-right">
           <a class="bar-item button" href="global.php" >Global</a>
           <!-- <a href="following.html" class="bar-item button">Following</a> -->
           <a href="me.php" class="bar-item button">Me</a>
+          <div class="dropdown">
+            <button class="dropbtn">Me 
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content">
+              <a href="#">Me Page</a>
+              <a href="#">Edit Profile</a>
+            </div>
+          </div> 
           <a href="index.php" class="bar-item button">Login</a>
           <a href="newpost.php" class="bar-item button">+</a>
       </div>
     </div>
       <div id = "block1">
-                    <h2 class = "name">taylor pane</h2>
+                    <h2 class = "name">taylor pane | taylor pane</h2>
+                    <h3 class = "username">@tpane</h3>
                     <p class="bio">hi i'm taylor and i'm so excited to be here! What is an Instagram Bio? Your Instagram bio is the section on your profile page where you include some information about yourself and/or your business. It can be found underneath your Instagram username. In your bio, you can include a short description,</p>
        </div>
        <div id = "block2">
