FINAL PUSH CHECKgit add .!

--- a/me.html
+++ b/me.html
@@ -7,25 +7,18 @@
       
     <div class="bar">
       <div class="top-left">
-          <a class="bar-item button" href="global.php">
-          <img class="mb-4" src="./listify 1 white.png" alt="" width="100" height="35"> 
+          <a class="bar-item button" href="welcomepage.html"> 
+            <!-- <b>LIST</b>ify -->
+            <img class="mb-4" src="./listify 1 white.png" alt="" width="100" height="35">
           </a>
       </div>
       <div class="top-right">
-          <div class="dropdown">
-              <a class ="dropbtn"> Profile
-                <i class="fa fa-caret-down"></i>
-              </a>
-              <div class="dropdown-content">
-                <a href="me.php">Profile Page</a>
-                <a href="newpost.php">New Post</a>
-                <a href="editprofile.php">Edit Profile</a>
-                <a href="index.php">Log Out</a>
-              </div>
-          </div>
-          <div class="top-right-right">
-          <a class="signedin">Signed in: @username</a>
-        </div>
+          <a class="bar-item button" href="global.php" >Global</a>
+          <!-- <a href="following.html" class="bar-item button">Following</a> -->
+          <a href="me.php" class="bar-item button">Me</a>
+          <a href="editprofile.php" class="bar-item button">Edit Profile</a>
+          <a href="index.php" class="bar-item button">Login</a>
+          <a href="newpost.php" class="bar-item button">+</a>
       </div>
     </div>
       <div id = "block1">
@@ -33,7 +26,7 @@
                     <h3 class = "username">@tpane</h3>
                     <p class="bio">hi i'm taylor and i'm so excited to be here! What is an Instagram Bio? Your Instagram bio is the section on your profile page where you include some information about yourself and/or your business. It can be found underneath your Instagram username. In your bio, you can include a short description,</p>
        </div>
-      <div id = "block2">
+       <div id = "block2">
                     <!-- <h2 class="category"><img class="mb-4" src="./Listify L transparent.png" alt="" width="35" height="35">ists:</h2> -->
                     <!-- liz: can you change css of list to make 2 columns" -->
                     <ul title = Movies>
@@ -48,8 +41,8 @@
                      <ul title = Books>
                       <a href=\"#$post[4]\"> <li> $post[0] </li></a>
                      </ul>
-                    <ul title = Podcasts>
-                      <a href=\"#$post[4]\"> <li> $post[0] </li></a>
+                    <ul title = Podcasts
+                      "<a href=\"#$post[4]\"> <li> $post[0] </li></a>
                     </ul>
 
                     
